[package]
name = "bomberman"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.1"
num-derive = "0.4"
cougr-core = { tag = "v0.0.1", git = "https://github.com/salazarsebas/Cougr.git" }

[dev-dependencies]
soroban-sdk = { version = "23.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]